--- a/02-display-grid.html
+++ b/02-display-grid.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="base.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="base.css" />
     <title>Display grid</title>
     <style>
-       body {
-           display: grid;
-       } 
+      body {
+        display: grid;
+      }
     </style>
-</head>
-<body>
-    <span class="box a">A</span>
-    <span class="box b">B</span>
-    <span class="box c">C</span>
-    <span class="box d">D</span>
-</body>
+  </head>
+  <body>
+    <span class="box a">A</span> <span class="box b">B</span>
+    <span class="box c">C</span> <span class="box d">D</span>
+  </body>
 </html>
