--- a/07-grid-column.html
+++ b/07-grid-column.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="base.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="base.css" />
     <title>Grid column</title>
     <style>
-       body {
-           display: grid;
-           grid-template-columns: 300px 3fr 1fr;
-           grid-template-rows: 2fr 3fr;
-       }
+      body {
+        display: grid;
+        grid-template-columns: 300px 3fr 1fr;
+        grid-template-rows: 2fr 3fr;
+      }
 
-       .d {
-           grid-column: 2;
-       }
+      .d {
+        grid-column: 2;
+      }
     </style>
-</head>
-<body>
-    <span class="box a">A</span>
-    <span class="box b">B</span>
-    <span class="box c">C</span>
-    <span class="box d">D</span>
-</body>
+  </head>
+  <body>
+    <span class="box a">A</span> <span class="box b">B</span>
+    <span class="box c">C</span> <span class="box d">D</span>
+  </body>
 </html>
